# Stable-diffusion-aws-extension-api-test

./: .gitignore  Config  Makefile  README.md  buildspec.yaml  buildspec_build.sh  buildspec_phases_build.sh  buildspec_phases_post_build.sh  buildspec_post_build.sh  config.py  local_build.sh  local_test.sh  local_test_k.sh  phases_build.sh  phases_post_build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: __init__.py
test_1_api/: __init__.py  bak_test_08_models.py  test_02_roles.py  test_03_users.py  test_04_checkpoints.py  test_05_endpoints.py  test_06_inferences.py  test_07_datasets.py  test_08_models.py  test_08_trainings.py  test_09_trainings.py
test_2_e2e/: bak_test_96_train_start_and_stop.py  old_test_98_endpoint_cool_down.py  test_01_create_role.py  test_02_create_and_delete_user.py  test_03_clean_checkpoints.py  test_03_endpoint_create.py  test_04_endpoint_create.py  test_04_upload_checkpoint_and_delete.py  test_05_update_checkpoint.py  test_05_upload_checkpoints.py  test_06_create_and_delete_dataset.py  test_07_create_and_delete_dataset.py  test_07_create_and_update_dataset.py  test_08_create_and_delete_dataset.py  test_08_create_and_update_dataset.py  test_08_endpoint_check.py  test_08_endpoint_check_async.py  test_08_endpoint_check_real_time.py  test_09_endpoint_check_async.py  test_09_infernence_txt2img.py  test_09_infernence_txt2img_real_time.py  test_10_inference_img2img_async.py  test_10_inference_img2img_real_time.py  test_10_inference_rembg_async.py  test_10_inference_rembg_real_time.py  test_10_infernence_img2img.py  test_10_train_start_and_stop.py  test_11_endpoint_check.py  test_11_inference_txt2img_async.py  test_11_infernence_sd_xl_turbo.py  test_12_inference_txt2img_real_time.py  test_12_infernence_txt2img.py  test_12_infernence_xyz_checkpoint.py  test_13_inference_esi_async.py  test_13_inference_esi_real_time.py  test_13_inference_txt2img_real_time.py  test_13_infernence_img2img.py  test_13_infernence_xyz_refiner_checkpoint.py  test_14_inference_img2img_async.py  test_14_infernence_xyz_vae_checkpoint.py  (+22 more)
test_2_user/: test_01_create_role.py  test_02_create_and_delete_user.py  test_04_endpoint_create.py  test_10_create_and_delete_dataset.py  test_11_create_and_update_dataset.py
test_3_checkpoint/: test_01_clean_checkpoints.py  test_02_update_checkpoint.py  test_03_upload_checkpoints.py  test_04_upload_checkpoint_and_delete.py
test_3_clean/: test_01_clean_endpoint.py  test_03_clean_checkpoints.py  test_04_clean_roles.py  test_05_clean_inferences.py
test_4_clean/: test_03_clean_checkpoints.py  test_04_clean_roles.py  test_05_clean_inferences.py  test_06_clean_train.py
test_4_inference/: bak_test_19_inference_rembg_real_time.py  test_11_endpoint_check_real_time.py  (+14 more)
(+210 files in other folders)
