[metadata]
name = stable-diffusion-aws-extension-api-test
version = 1.0
description = Stable-diffusion-aws-extension-api-test
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
package_dir =
    = src
packages = find:

########################################################################
# Brazil options
########################################################################
# Control whether to install scripts to $ENVROOT/bin. The valid values are:
# * default-only: install scripts for the version corresponding to
#   Python-default in your version set. If this package doesn't build for
#   that version, you won't get root scripts.
# * True: always install scripts for some version of python that the package
#   builds for (in practice, this will be the last version that is built).
#   Note that in this case, you also need to ensure that the appropriate
#   runtime interpreter is in the dependency closure of your environment.
# * <a specific python version, e.g. python3.6 or jython2.7>: only
#   attempt to install root scripts for the specific interpreter version. If
#   this package is in a version set where that interpreter is not enabled,
#   you won't get root scripts. You almost certainly don't want this.
root_script_source_version = default-only

# The test runner for BrazilPython
test_command = brazilpython_pytest


[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
    = ["py.typed"]


[options.entry_points]
# Additional coverage.py settings. The parallel flag and source values are
# necessary so that pytest-cov knows to alias the brazil build artifact absolute
# paths to the relative ones from your package source.
[coverage:run]
branch = true
parallel = true

[coverage:paths]
source =
    src/
    build/lib/*/site-packages/

[coverage:html]
directory = build/brazil-documentation/coverage

[coverage:xml]
output = build/brazil-documentation/coverage/coverage.xml

# Code formatting configuration.
[brazilpython_formatters]
include = test
formatters = black,isort
autopep8_opts =
    --max-line-length=100

[brazilpython_flake8]
include =
    test

[flake8]
ignore =
    # Not pep8, black adds whitespace before ':'
    E203,
    # Not pep8, black adds line break before binary operator
    W503,
    # Once `bb format` is done with things, the only remaining long lines do not
    # matter; we can ignore them.
    E501,
max_line_length = 100
# Uncomment to enforce a maximum cyclomatic complexity - more info https://en.wikipedia.org/wiki/Cyclomatic_complexity
# max_complexity=10


